--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  friend: 
-  hashtag_id: 
+  content: MyText
+  friend_id: 
 
 two:
-  friend: 
-  hashtag_id: 
+  content: MyText
+  friend_id: 
